[package]
name = "clash_verge_logger"
version = "0.2.1"
edition = "2024"
authors = ["Tunglies"]
license = "GPL-3.0"

[features]
color = ["nu-ansi-term"]

[dependencies]
arraydeque = "0.5.1"
compact_str = { version = "0.9.0", features = ["rkyv", "smallvec"] }
flexi_logger = "0.31.4"
log = "0.4.28"
nu-ansi-term = {version = "0.50.1", optional = true}
tokio = { version = "1.48.0", features = ["sync"] }
